Simplify first-version error handling
